# TestABC

./: .gitignore  CMakeLists.txt  Makefile  README.md  abclib.dsp
.github/scripts/: abcexe.vcxproj  abclib.vcxproj.template  abcspace.sln
.github/workflows/: build-windows.yml
src/aig/gia/: giaAiger.c  giaDup.c  giaSpeedup.c
src/base/abc/: abcHieGia.c
src/base/abci/: abc.c  abcResub.c  abcVerify.c
src/base/cmd/: cmd.c
src/misc/tim/: timMan.c  timTime.c
src/proof/abs/: absDup.c
src/proof/cec/: cecCorr.c  cecProve.c
src/proof/ssw/: sswConstr.c  sswCore.c  sswDyn.c  sswInt.h  sswSweep.c
src/sat/bmc/: bmcMaj.c
src/sat/cadical/: cadical_walk.cpp
test/: CMakeLists.txt
test/aig/: CMakeLists.txt  aig.cc  aigChoice.cc  aigCut.cc  aigDup.cc  aigLevel.cc  aigResub.cc
test/data/i10Samples/: i10_SpId_0.aig  i10_SpId_1.aig  i10_SpId_10.aig  i10_SpId_11.aig  i10_SpId_12.aig  i10_SpId_13.aig  i10_SpId_2.aig  i10_SpId_3.aig  i10_SpId_4.aig  i10_SpId_5.aig  i10_SpId_6.aig  i10_SpId_7.aig  i10_SpId_8.aig  i10_SpId_9.aig
test/gia/: CMakeLists.txt  gia.cc  giaCut.cc  giaSamplesSweeping.cc  giaSingleOperation.cc
test/miniaig/: CMakeLists.txt  miniaig.cc
test/sop/: CMakeLists.txt  sop.cc
test/truth/: CMakeLists.txt  truth.cc
test/util/: CMakeLists.txt  util.cc
